@@ -6,6 +6,7 @@ Version 1.1.3 (released ??-???-????)
   * fix not-a-sequence error in diff view
   * allow viewvc-install to work when templates-contrib is absent
   * minor template improvements/corrections
+  * expose revision metadata in diff view (issue #431)
 
 Version 1.1.2 (released 11-Aug-2009)
 
